2005-01-19  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkobject.c (gtk_object_add_arg_type): Use GLib limit 
	macros to avoid sparse warnings. Pointed out by Kjartan Maraas.

	* gdk/x11/gdkdisplay-x11.c: Precache the _NET_VIRTUAL_ROOTS
	atom.

	* gdk/x11/gdkwindow-x11.c (gdk_window_get_frame_extents): 
	Support _NET_VIRTUAL_ROOTS.  (#163910, Carsten Haitzler)
	
	* gdk/gdk.symbols: 
	* gdk/x11/gdkx.h: 
	* gdk/x11/gdkdisplay-x11.c (gdk_x11_display_get_user_time): 
	Add a function to obtain the last user interaction 
	time.  (#163119, Elijah Newren)

Tue Jan 18 13:56:09 2005  Manish Singh  <yosh@gimp.org>

	* gtk/gtkfilechooserdefault.c (pending_op_queue): Actually assign
	PENDING_OP_NONE.

Tue Jan 18 13:46:46 2005  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkdrawable-x11.c (_gdk_x11_have_render_with_trapezoids):
	disambiguate nested if/else.

2005-01-18  Federico Mena Quintero  <federico@ximian.com>

	Merged from gtk-2-6:

	* gtk/gtkfilechooserdefault.c (pending_op_queue): Don't queue an
	operation to select the first file if we are in SAVE or
	CREATE_FOLDER modes.  Executing that operation would overwrite the
	contents of the save-name entry.

2005-01-18  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkdisplay.h: 
	* gdk/x11/gdkwindow-x11.c (gdk_display_warp_pointer): 
	* gdk/win32/gdkwindow-win32.c (gdk_display_warp_pointer): Add
	pointer warping to GDK.  (#160437)

	* gtk/gtkcolorsel.c (key_press): Use gdk_display_warp_pointer.

2005-01-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkstyle.c (gtk_default_draw_check) 
	(gtk_default_draw_option, gtk_default_draw_handle): Add some
	more NULL checks, patch by Michael Natterer.

Tue Jan 18 10:55:47 2005  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtkstyle.c (gtk_default_draw_handle): Check for NULL detail
	and NULL widget.

	* gtk/gtkstyle.c (gtk_default_draw_box): Check for NULL detail and
	NULL widget.  (#164477, Michael Natterer)

2005-01-18  Matthias Clasen  <mclasen@redhat.com>
