@@ -1,5 +1,9 @@
 2005-01-19  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_should_respond):
+	In save mode, don't return paths containing nonexisting 
+	directories.  (#162443, Jean Marie Favreau)
+
 	* gtk/gtkobject.c (gtk_object_add_arg_type): Use GLib limit 
 	macros to avoid sparse warnings. Pointed out by Kjartan Maraas.
 
